2 February 2010: Wouter
	- Updated url of IANA itar, interim trust anchor repository, in script.

1 February 2010: Wouter
	- iana portlist updated.
	- configure test for memcmp portability.

27 January 2010: Wouter
	- removed warning on format string in validator error log statement.
	- iana portlist updated.

22 January 2010: Wouter
	- libtool finish the install of unbound python dynamic library.

21 January 2010: Wouter
	- acx_nlnetlabs.m4 synchronised with nsd's version.

20 January 2010: Wouter
	- Fixup lookup trouble for parent-child domains on the first query.

14 January 2010: Wouter
	- Fixup ldns detection to also check for header files.

13 January 2010: Wouter
	- prefetch-key option that performs DNSKEY queries earlier in the
	  validation process, and that could halve the latency on DNSSEC
	  queries.  It takes some extra processing (CPU, a cache is needed).

12 January 2010: Wouter
	- Fix unbound-checkconf for auto-trust-anchor-file present checks.

8 January 2010: Wouter
	- Fix for parent-child disagreement code which could have trouble
	  when (a) ipv6 was disabled and (b) the TTL for parent and child
	  were different.  There were two bugs, the parent-side information
	  is fixed to no longer block lookup of child side information and
	  the iterator is fixed to no longer attempt to get ipv6 when it is
	  not enabled and then give up in failure.
	- test and fixes to make prefetch actually store the answer in the
	  cache.  Considers some rrsets 'already expired' but does not allow
	  overwriting of rrsets considered more secure.

7 January 2010: Wouter
	- Fixup python documentation (thanks Leo Vandewoestijne).
	- Work on cache prefetch feature.
	- Stats for prefetch, in log print stats, unbound-control stats
	  and in unbound_munin plugin.

6 January 2010: Wouter
	- iana portlist updated.
	- bug#291: DNS wireformat max is 255. dname_valid allowed 256 length.
	- verbose output includes parent-side-address notion for lameness.